...
    tools:context=".views.AdminAllProfilesView">

    <TextView
        android:id="@+id/allProfilesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profiles"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        android:background="#CCFFFFFF"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
...
            android:dividerHeight="1dp"
            android:divider="@android:color/darker_gray"
            app:layout_constraintHorizontal_bias="0.666" />
    </FrameLayout>

    <Button
        android:id="@+id/admin_all_users_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
