...
            android:layout_height="wrap_content"
            android:text="Back"
            android:layout_margin="8dp"/>

        <!-- Delete Button -->
        <Button
            android:id="@+id/delete_DetailEventBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Delete Event" />

        <!-- Entrants Button -->
...
