...
        android:textStyle="bold"
        tools:text="poop" />

    <!-- Recycle view  for the events!!! -->

    <Button
        android:id="@+id/manageFacilityProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="Manage Facility"
        android:textSize="10sp" />
...
